chore(): Fix markdown spacing, code colors and style, and broken image

--- a/src/css/components/_code.scss
+++ b/src/css/components/_code.scss
@@ -1,7 +1,6 @@
 :root {
   --ifm-code-padding-vertical: 0.25rem;
-  --ifm-code-font-size: 95%;
-  --ifm-code-border-radius: 4px;
+  --ifm-code-font-size: 0.813rem;
   --ifm-code-background: var(--c-indigo-10);
   --ifm-code-color: var(--token-heading-color-dark);
 }
