--- a/src/css/components/_markdown.scss
+++ b/src/css/components/_markdown.scss
@@ -11,6 +11,31 @@ html[data-theme='dark'] {
 }
 
 .markdown {
+  --ifm-heading-vertical-rhythm-bottom: 0.6;
+  --ifm-heading-vertical-rhythm-top: 2;
+  --ifm-h2-vertical-rhythm-top: 2.75;
+  --ifm-h3-vertical-rhythm-top: 2.25;
+
+  --ifm-h1-font-size: 3.5rem;
+  --ifm-h2-font-size: 2rem;
+  --ifm-h3-font-size: 1.5rem;
+  --ifm-h4-font-size: 1.25rem;
+  --ifm-h5-font-size: 1rem;
+  --ifm-h6-font-size: 0.875rem;
+
+  strong,
+  b {
+    font-weight: 600;
+  }
+
+  //differentiate between inline code and code blocks
+  code {
+    font-size: 95%;
+  }
+  pre code {
+    font-size: inherit;
+  }
+
   .encapsulation-pill {
     position: absolute;
     top: calc(
@@ -33,6 +58,37 @@ html[data-theme='dark'] {
   p,
   li {
     line-height: 200%;
+
+    > strong,
+    > b {
+      color: var(--c-carbon-100);
+    }
+  }
+
+  // have to override style coming from .h1Heading_node_modules-\@docusaurus-theme-classic-lib-next-theme-Heading-styles-module
+  header > h1 {
+    font-size: var(--ifm-h1-font-size);
+    letter-spacing: -0.04em;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    letter-spacing: -0.02em;
+
+    > a {
+      color: inherit;
+    }
+  }
+
+  h2 + h3,
+  h3 + h4,
+  h4 + h5,
+  h5 + h6 {
+    margin-block-start: 1rem;
   }
 
   //intro paragraphs
@@ -40,9 +96,19 @@ html[data-theme='dark'] {
     color: var(--markdown-text-intro-c);
     font-size: 1.25rem;
 
+    > strong,
+    > b {
+      color: var(--c-indigo-100);
+    }
+
     + p {
       color: var(--markdown-text-intro-c);
       font-size: 1.25rem;
+
+      > strong,
+      > b {
+        color: var(--c-indigo-100);
+      }
     }
   }
 
